# extrainterpreters

./: .gitignore  README.md  extrainterpreters.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pypi.yml  python-app.yml
benchmark/: bench1.py
extrainterpreters/: extrainterpreters.py
extrainterpreters/extrainterpreters/: __init__.py  base_interpreter.py  memoryboard.c  memoryboard.py  pipe.py  piped_interpreter.py  simple_interpreter.py
src/extrainterpreters/: __init__.py  base_interpreter.py  executor.py  lock.py  memoryboard.c  memoryboard.py  piped_interpreter.py  queue.py  remote_array.py  resources.py  simple_interpreter.py  utils.py
tests/: conftest.py  helper_01.py  test_basic.py  test_boards.py  test_lock.py  test_low_level.py  test_queue.py  test_struct.py
